# cosmic-widget-applet

./: .gitignore  ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  justfile
i18n/en/: cosmic_monitor_applet.ftl  cosmic_widget_applet.ftl
resources/: app.desktop  app.metainfo.xml  settings.desktop  widget.desktop
src/: app.rs  config.rs  i18n.rs  main.rs  settings.rs  settings_main.rs  widget_main.rs
src/widget/: battery.rs  cache.rs  layout.rs  media.rs  mod.rs  notifications.rs  renderer.rs  storage.rs  temperature.rs  theme.rs  utilization.rs  weather.rs
