[package]
name = "cosmic-widget-applet"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "System resource monitor widget for COSMIC"
repository = "https://github.com/zoliviragh/cosmic-widget-applet"

[[bin]]
name = "cosmic-widget-applet"
path = "src/main.rs"

[[bin]]
name = "cosmic-widget"
path = "src/widget_main.rs"

[[bin]]
name = "cosmic-widget-settings"
path = "src/settings_main.rs"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
sysinfo = "0.32"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
zbus = "4.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Wayland layer-shell dependencies for widget
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
cairo-rs = { version = "0.20", features = ["png"] }
pango = "0.20"
pangocairo = "0.20"
libc = "0.2.177"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
